# citation-review-crew

./: .env.example  .gitignore  README.md  README_CN.md  citations.txt  inserted_content.txt  pyproject.toml
src/citation_review_crew/: crew.py  main.py
src/citation_review_crew/config/: agents.yaml  tasks.yaml
src/citation_review_crew/fix/: flow.py
src/citation_review_crew/tools/: docx_reader.py  manual_search.py  presearch.py  scholar_search.py  zotero_import.py  zotero_tool.py
