[project]
name = "citation_review_crew"
version = "0.1.0"
description = "CrewAI-powered academic citation review and auto-fix tool"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "python-docx>=1.1.2",
    "playwright>=1.58.0",
]

[project.scripts]
citation_review_crew = "citation_review_crew.main:run"
run_crew = "citation_review_crew.main:run"
train = "citation_review_crew.main:train"
replay = "citation_review_crew.main:replay"
test = "citation_review_crew.main:test"
run_with_trigger = "citation_review_crew.main:run_with_trigger"
fix = "citation_review_crew.main:fix"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
